--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
-    "server": "nodemon server.js",
+    "start": "node server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
@@ -20,7 +19,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
-    "node": "^17.3.0",
+    "nodemon": "^2.0.15",
     "stripe": "^8.201.0",
     "uuid": "^8.3.2"
   }
