--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines":{
+    "node":"16.13.1",
+    "npm":"8.1.2"},
   "scripts": {
     "start": "node server.js",
     "client-install": "npm install --prefix client",
