--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "client-install": "npm install --prefix client",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
