--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "npm":"8.1.2"
   },
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "npm run build"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
