--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm":"8.1.2"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
